[package]
name = "monet"
version = "0.1.0"
authors = ["André Nascimento <andrenascimento@ua.pt>", "Rui Lopes <ruieduardo.fa.lopes@av.it.pt>"]
edition = "2018"

[dependencies]
clap = "2.33"
failure = "0.1"
pnet = "0.22"
pnet_macros_support = "0.22"
regex = "1"
slog = "2.4"
slog-term = "2.4"
slog-async = "2.3"
time = "0.1"