[package]
name = "monet"
version = "0.1.0"
authors = ["André Nascimento <andrenascimento@ua.pt>", "Rui Lopes <ruieduardo.fa.lopes@av.it.pt>"]
edition = "2018"

[dependencies]
bincode = "1.1"
clap = "2.33"
crossbeam-utils = "0.6"
failure = "0.1"
ipnetwork = "0.14"
pnet = "0.22"
pnet_macros_support = "0.22"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
slog = "2.4"
slog-term = "2.4"
slog-async = "2.3"
time = "0.1"